nginx-rollout-demo/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: nginx-rollout
spec:
  replicas: 5

  selector:
    matchLabels:
      app: nginx

  template:
    metadata:
      labels:
        app: nginx

    spec:
      containers:
      - name: nginx
        image: nginx:1.26

        ports:
        - containerPort: 80

  strategy:
    canary:
      canaryService: nginx-canary
      stableService: nginx-stable

      trafficRouting:
        nginx:
          stableIngress: nginx-ingress

      steps:
      - setWeight: 20

      - pause:
          duration: 30s

      - setWeight: 50

      - pause:
          duration: 30s

      - setWeight: 100
