nginx-rollout-demo/service-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-canary

spec:
  selector:
    app: nginx

  ports:
  - port: 80
    targetPort: 80
