nginx-rollout-demo/service-stable.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-stable

spec:
  selector:
    app: nginx

  ports:
  - port: 80
    targetPort: 80
